# codexvault

./: LICENSE  README.md  SECURITY.md  STATUS.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: codexvault-release.yml
docs/: architecture.md  demo-vault.md  file-format.md  manual-qa.md  openclaw-workflow.md  release.md  windows-validation.md
scripts/release/: generate-checksums.mjs  verify-release-truth.mjs
src/: App.css  App.release-gate.test.tsx  App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: demo_vault.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  demo.rs  error.rs  exports.rs  lib.rs  main.rs  models.rs  prefs.rs  state.rs  storage.rs
src/components/: EntryEditorModal.test.tsx  EntryEditorModal.tsx  LockScreen.tsx  SettingsModal.tsx  StatusPill.tsx
src/hooks/: useIdleLock.ts
src/lib/: desktop.ts  filters.test.ts  filters.ts  types.ts  vaultApi.ts
templates/: env.example  generic.json  openclaw-bundle.json  openclaw.env  provider-snippet.json
