[package]
name = "codexvault"
version = "0.1.0"
description = "Local-first encrypted API key vault for AI operators"
authors = ["CodexVault contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.94.0"

[lib]
name = "codexvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
parking_lot = "0.12.5"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.4.2"
tempfile = "3.23.0"
thiserror = "1.0.69"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
